added more commnets....

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,10 +1,17 @@
 /*
-  This is configuration for the pipeline
+  These are the parameters for running the pipeline with nextflow.
+  
+  Specify pipeline configuration files (which contains all the parameters for the python scripts)
+
+  Specify output configuration
 
 */
+
 params {
   // specify the output directory of the pipeline
   outdir = "/Users/kevinliang/Desktop/work/working/exwas_pipelines/results"
+
+
   // specify the configuration file for the pipeline
   /*
     This includes all the programs and parameters to run the different tools
