--- a/config_templates/proj_config_template.yml
+++ b/config_templates/proj_config_template.yml
@@ -194,10 +194,10 @@ regenie_burden_testing: &regenie_burden_testing
     "--firth":"",
     "--approx":"",
     "--phenoCol":"TRAIT",
-    "covarColClist":"Age,Age_square,sex_age_interaction",
-    "catCovarList":"biological_sex",
-    "vc-tests":"skato",
-    "vc-maxAAF":"0.01",
+    "--covarColClist":"Age,Age_square,sex_age_interaction",
+    "--catCovarList":"biological_sex",
+    "--vc-tests":"skato",
+    "--vc-maxAAF":"0.01",
     "--build-mask":"max",
     "--joint":"acat",
     "--bsize":"200"
