--- a/nextflow_template.config
+++ b/nextflow_template.config
@@ -1,245 +1,238 @@
-/*
-  Default config options for all compute environments
-  
-  Specify pipeline configuration files (which contains all the parameters for the python scripts)
+    /*
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    PIPELINE NEXTFLOW CONFIGURATION PARAMETERS
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    */
+    params {
+    // Input VCF file for annotations
+    annotation_vcf = ""
 
-  Specify output configuration
+    // Input Regenie files for ExWAS
+    step2_exwas_genetic = ""
 
-*/
+    // exwas file type
+    // // accepted values are pgen, bgen, bfiles (the same flags that Regenie takes)
+    step2_exwas_genetic_file_type = "pgen"
+    
 
-profiles {
-  conda {
-    process.conda = "${baseDir}/exwas_pipeline_conda_env.yml"
-    conda.enabled = true
-    process.executor = 'local'
-  }
-  standard {
-    process.executor = 'local'
-  }
-}
+    // specify the output directory of the pipeline
+    // it is created if does not exist
+    outdir = ""
+    
+    // configuration file
+    config_file = ""
 
+    trace_report_suffix = "exwas_pipeline_trace"
 
+    conda_env_file="exwas_pipeline_environment.yml"
 
-params {
-  // Input VCF file
-  input_vcf = ""
+    vep_apptainer_img = "exwas_pipeline_vep105_apptainer.def"
+    }
 
-  // specify the output directory of the pipeline
-  outdir = ""
+    /*
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    BELOW SECTIONS ARE DEFAULT CONFIGURATIONS FOR PIPELINE EXECUTION
+        e.g., SLURM walltime, memory settings, etc
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    */
 
-  // specify the yaml configuration file for ExWAS analysis and program executables
-  // e.g., proj_config.yml
-  config_file = ""
-}
+    // runtime parameters of output structures and other constants
+    outputDir = "${params.outdir}/results"
+    trace.overwrite = true
+    report.overwrite = true
+    timeline.overwrite = true
+    dag.overwrite = true
 
-// Load base.config by default for all pipelines
-includeConfig 'conf/base.config'
-
-profiles {
-    debug {
-        dumpHashes              = true
-        process.beforeScript    = 'echo $HOSTNAME'
-        cleanup                 = false
-        nextflow.enable.configProcessNamesValidation = true
-    }
-    conda {
-        conda.enabled           = true
-        docker.enabled          = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
-        conda.channels          = ['conda-forge', 'bioconda']
-        apptainer.enabled       = false
-    }
-    mamba {
-        conda.enabled           = true
-        conda.useMamba          = true
-        docker.enabled          = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
-        apptainer.enabled       = false
-    }
-    docker {
-        docker.enabled          = true
-        conda.enabled           = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
-        apptainer.enabled       = false
-        docker.runOptions       = '-u $(id -u):$(id -g)'
-    }
-    arm {
-        docker.runOptions       = '-u $(id -u):$(id -g) --platform=linux/amd64'
-    }
-    singularity {
-        singularity.enabled     = true
-        singularity.autoMounts  = true
-        conda.enabled           = false
-        docker.enabled          = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
-        apptainer.enabled       = false
-    }
-    podman {
-        podman.enabled          = true
-        conda.enabled           = false
-        docker.enabled          = false
-        singularity.enabled     = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
-        apptainer.enabled       = false
-    }
-    shifter {
-        shifter.enabled         = true
-        conda.enabled           = false
-        docker.enabled          = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        charliecloud.enabled    = false
-        apptainer.enabled       = false
-    }
-    charliecloud {
-        charliecloud.enabled    = true
-        conda.enabled           = false
-        docker.enabled          = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        apptainer.enabled       = false
-    }
-    apptainer {
-        apptainer.enabled       = true
-        apptainer.autoMounts    = true
-        conda.enabled           = false
-        docker.enabled          = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
-    }
-    wave {
-        apptainer.ociAutoPull   = true
-        singularity.ociAutoPull = true
-        wave.enabled            = true
-        wave.freeze             = true
-        wave.strategy           = 'conda,container'
-    }
-    gitpod {
-        executor.name           = 'local'
-        executor.cpus           = 4
-        executor.memory         = 8.GB
-        process {
-            resourceLimits = [
-                memory: 8.GB,
-                cpus  : 4,
-                time  : 1.h
-            ]
+    profiles {
+        debug {
+            dumpHashes              = true
+            process.beforeScript    = 'echo $HOSTNAME'
+            cleanup                 = false
+            nextflow.enable.configProcessNamesValidation = true
+        }
+        conda {
+            conda.enabled           = true
+            docker.enabled          = false
+            singularity.enabled     = false
+            podman.enabled          = false
+            shifter.enabled         = false
+            charliecloud.enabled    = false
+            conda.channels          = ['conda-forge', 'bioconda']
+            apptainer.enabled       = false
+            process.conda = "${params.conda_env_file}"
+            process.executor = 'local'
+        }
+        mamba {
+            conda.enabled           = true
+            conda.useMamba          = true
+            docker.enabled          = false
+            singularity.enabled     = false
+            podman.enabled          = false
+            shifter.enabled         = false
+            charliecloud.enabled    = false
+            apptainer.enabled       = false
+        }
+        docker {
+            docker.enabled          = true
+            conda.enabled           = false
+            singularity.enabled     = false
+            podman.enabled          = false
+            shifter.enabled         = false
+            charliecloud.enabled    = false
+            apptainer.enabled       = false
+            docker.runOptions       = '-u $(id -u):$(id -g)'
+        }
+        arm {
+            docker.runOptions       = '-u $(id -u):$(id -g) --platform=linux/amd64'
+        }
+        singularity {
+            singularity.enabled     = true
+            singularity.autoMounts  = true
+            conda.enabled           = false
+            docker.enabled          = false
+            podman.enabled          = false
+            shifter.enabled         = false
+            charliecloud.enabled    = false
+            apptainer.enabled       = false
+        }
+        podman {
+            podman.enabled          = true
+            conda.enabled           = false
+            docker.enabled          = false
+            singularity.enabled     = false
+            shifter.enabled         = false
+            charliecloud.enabled    = false
+            apptainer.enabled       = false
+        }
+        shifter {
+            shifter.enabled         = true
+            conda.enabled           = false
+            docker.enabled          = false
+            singularity.enabled     = false
+            podman.enabled          = false
+            charliecloud.enabled    = false
+            apptainer.enabled       = false
+        }
+        charliecloud {
+            charliecloud.enabled    = true
+            conda.enabled           = false
+            docker.enabled          = false
+            singularity.enabled     = false
+            podman.enabled          = false
+            shifter.enabled         = false
+            apptainer.enabled       = false
+        }
+        apptainer {
+            apptainer.enabled       = true
+            apptainer.autoMounts    = true
+            conda.enabled           = false
+            docker.enabled          = false
+            singularity.enabled     = false
+            podman.enabled          = false
+            shifter.enabled         = false
+            charliecloud.enabled    = false
+        }
+        wave {
+            apptainer.ociAutoPull   = true
+            singularity.ociAutoPull = true
+            wave.enabled            = true
+            wave.freeze             = true
+            wave.strategy           = 'conda,container'
+        }
+        gitpod {
+            executor.name           = 'local'
+            executor.cpus           = 4
+            executor.memory         = 8.GB
+            process {
+                resourceLimits = [
+                    memory: 8.GB,
+                    cpus  : 4,
+                    time  : 1.h
+                ]
+            }
+        }
+        test      { includeConfig 'conf/test.config'      }
+        test_full { includeConfig 'conf/test_full.config' }
+        standard {
+            process.executor = 'local'
+            process.conda = "${params.conda_env_file}"
+            conda.enabled = true
+        }
+        slurm_conda {
+            max_memory=120.GB
+            max_cpu=10
+            max_time='72:00:00' 
+            executor.perCpuMemAllocation = true
+            process.executor = 'slurm'
+            process.conda = "${params.conda_env_file}"
+            conda.enabled = true
+            process.maxRetries = 1
+            executor.submitRateLimit = "5/1sec"
+            jobName = {
+            task.name.replace("[", "(").replace("]", ")").replace(" ", "_")
+            }
         }
     }
-    test      { includeConfig 'conf/test.config'      }
-    test_full { includeConfig 'conf/test_full.config' }
-}
 
-// Load nf-core custom profiles from different Institutions
-includeConfig !System.getenv('NXF_OFFLINE') && params.custom_config_base ? "${params.custom_config_base}/nfcore_custom.config" : "/dev/null"
-
-// Load test/test custom profiles from different institutions.
-// TODO nf-core: Optionally, you can add a pipeline-specific nf-core config at https://github.com/nf-core/configs
-// includeConfig !System.getenv('NXF_OFFLINE') && params.custom_config_base ? "${params.custom_config_base}/pipeline/test.config" : "/dev/null"
-
-// Set default registry for Apptainer, Docker, Podman, Charliecloud and Singularity independent of -profile
-// Will not be used unless Apptainer / Docker / Podman / Charliecloud / Singularity are enabled
-// Set to your registry if you have a mirror of containers
-apptainer.registry    = 'quay.io'
-docker.registry       = 'quay.io'
-podman.registry       = 'quay.io'
-singularity.registry  = 'quay.io'
-charliecloud.registry = 'quay.io'
-
-// Load igenomes.config if required
-includeConfig !params.igenomes_ignore ? 'conf/igenomes.config' : 'conf/igenomes_ignored.config'
-
-// Export these variables to prevent local Python/R libraries from conflicting with those in the container
-// The JULIA depot path has been adjusted to a fixed path `/usr/local/share/julia` that needs to be used for packages in the container.
-// See https://apeltzer.github.io/post/03-julia-lang-nextflow/ for details on that. Once we have a common agreement on where to keep Julia packages, this is adjustable.
-
-env {
-    PYTHONNOUSERSITE = 1
-    R_PROFILE_USER   = "/.Rprofile"
-    R_ENVIRON_USER   = "/.Renviron"
-    JULIA_DEPOT_PATH = "/usr/local/share/julia"
-}
-
-// Set bash options
-process.shell = [
-    "bash",
-    "-C",         // No clobber - prevent output redirection from overwriting files.
-    "-e",         // Exit if a tool returns a non-zero status/exit code
-    "-u",         // Treat unset variables and parameters as an error
-    "-o",         // Returns the status of the last command to exit..
-    "pipefail"    //   ..with a non-zero status or zero if all successfully execute
-]
-
-// Disable process selector warnings by default. Use debug profile to enable warnings.
-nextflow.enable.configProcessNamesValidation = false
-
-timeline {
-    enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_timeline_${params.trace_report_suffix}.html"
-}
-report {
-    enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_report_${params.trace_report_suffix}.html"
-}
-trace {
-    enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_trace_${params.trace_report_suffix}.txt"
-}
-dag {
-    enabled = true
-    file    = "${params.outdir}/pipeline_info/pipeline_dag_${params.trace_report_suffix}.html"
-}
-
-manifest {
-    name            = 'test/test'
-    author          = """test""" // The author field is deprecated from Nextflow version 24.10.0, use contributors instead
-    contributors    = [
-        // TODO nf-core: Update the field with the details of the contributors to your pipeline. New with Nextflow version 24.10.0
-        [
-            name: 'test',
-            affiliation: '',
-            email: '',
-            github: '',
-            contribution: [], // List of contribution types ('author', 'maintainer' or 'contributor')
-            orcid: ''
-        ],
-    ]
-    homePage        = 'https://github.com/test/test'
-    description     = """test"""
-    mainScript      = 'main.nf'
-    defaultBranch   = 'master'
-    nextflowVersion = '!>=24.04.2'
-    version         = '1.0.0dev'
-    doi             = ''
-}
-
-// Nextflow plugins
-plugins {
-    id 'nf-schema@2.3.0' // Validation of pipeline parameters and creation of an input channel from a sample sheet
-}
-
-validation {
-    defaultIgnoreParams = ["genomes"]
-    monochromeLogs = params.monochrome_logs
-    help {
-        enabled = true
-        command = "nextflow run test/test -profile <docker/singularity/.../institute> --input samplesheet.csv --outdir <OUTDIR>"
-        fullParameter = "help_full"
-        showHiddenParameter = "show_hidden"
+    process {
+        withLabel:"big_memory" {
+            cpus = 5
+            memory = 32.GB
+        }
+        withLabel:"light" {
+            cpus = 1
+            memory = 15.GB
+        }
+        withLabel:"long" {
+            time="24:00:00"
+        }
+        withLabel:"medium" {
+            time="12:00:00"
+        }
+        withLabel:"short" {
+            time="1:00:00"
+        }
+        withLabel:"instant" {
+            time="00:30:00"
+        }
     }
-}
+
+    // Set bash options
+    process.shell = [
+        "bash",
+        "-C",         // No clobber - prevent output redirection from overwriting files.
+        "-e",         // Exit if a tool returns a non-zero status/exit code
+        "-u",         // Treat unset variables and parameters as an error
+        "-o",         // Returns the status of the last command to exit..
+        "pipefail"    //   ..with a non-zero status or zero if all successfully execute
+    ]
+
+    // Disable process selector warnings by default. Use debug profile to enable warnings.
+    nextflow.enable.configProcessNamesValidation = false
+
+    timeline {
+        enabled = true
+        file    = "${params.outdir}/pipeline_execution_information/execution_timeline_${params.trace_report_suffix}.html"
+    }
+    report {
+        enabled = true
+        file    = "${params.outdir}/pipeline_execution_information/execution_report_${params.trace_report_suffix}.html"
+    }
+    trace {
+        enabled = true
+        file    = "${params.outdir}/pipeline_execution_information/execution_trace_${params.trace_report_suffix}.txt"
+    }
+    dag {
+        enabled = true
+        file    = "${params.outdir}/pipeline_execution_information/pipeline_dag_${params.trace_report_suffix}.html"
+    }
+
+    manifest {
+        name            = 'richardslab/ExWAS_pipeline'
+        author          = """Kevin Liang, Ethan Kreuzer, Yann Ilboudo, Yiheng Chen, J. Brent richards, Guillaume Butler-Laporte""" // The author field is deprecated from Nextflow version 24.10.0, use contributors instead
+        homePage        = 'https://github.com/richardslab'
+        description     = """ExWAS gene burden testing pipeline"""
+        mainScript      = 'main.nf'
+        defaultBranch   = 'main'
+        version         = '1.0.0dev'
+    }
